@@ -33,6 +33,7 @@ New features:
 		* Templates for ASCII and Binary import filters - allow to save and load current filter settings
 		* Support data import from ODS (Open Document Spreadsheet) files
 		* Addeded seaborn's datasets to the collection of datasets
+		* Properly import Origin projects having graphs with mutliple axes (BUG 476355)
 
 Performance improvements:
 	* Make baseline removal much faster by using Eigen3 library (optional dependency)
